# SX-ansatz

./: README.md  pyproject.toml
notebooks/: article_torons.py  s1_s2_s3_ansatz.py
notebooks/__marimo__/session/: s1_s2_s3_ansatz.py.json
